--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
             <div class="beak bottom"></div>
             <div class="shirt">
               <div>💜</div>
-              <p>I CSS</p>
+              <p>I Blue Coral Fish</p>
       
             </div>
-          <div class="penguin-body"></div>
+          <div class="penguin-body">
+            <div class="foot left"></div>
+            <div class="foot right"></div>
+          </div>
         </div>
         <div class="ground"></div>
       </body>
